--- a/contact.html
+++ b/contact.html
@@ -138,30 +138,6 @@
 
       </div>
     </div>
-<!--
-    <div class="wide-container content">
-      <section class="row">
-        <div class="col-xl-6">
-          <img src="img/2.jpg" alt="" />
-        </div>
-        <div class="col-xl-6">
-          <h3 class="feature__title">Contact Assure Energy.</h3>
-          <div class="row">
-            <div class="col-md-6">
-              <h4>Chris Rempel</h4>
-              <p>President &amp; CEO</p>
-              <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
-            </div>
-            <div class="col-md-6">
-              <h4>Sly Latreille</h4>
-              <p>Vice President / Operations</p>
-              <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
--->
 
   </main>
 
@@ -171,7 +147,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
-          <p>Integrity driven, labour solutions.</p>
+          <p>Integrity driven. Labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
