--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="feature__photo" style="background-image:url(img/10.jpg)">
       <div class="container">
         <h1 class="feature__title larger roadgeek">Assure Energy Services</h1>
-        <p><span class="primary-color">Integrity Driven</span> Labour Solutions</p>
+        <p>Integrity Driven. Labour Solutions.</p>
 
       </div>
     </section>
@@ -85,7 +85,7 @@
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="50">
             <div class="cg__card">
               <img src="img/4.jpg" alt="Water Technicians" />
-              <p class="h4"><strong>Water Technicians</strong></p>
+              <p class="h4">Water Technicians</p>
               <p>Our crew of skilled professionals will help meet your manpower needs quickly and effectively to alleviate the pressures of growing client demands, while maintaining responsible company growth.</p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
@@ -93,7 +93,7 @@
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="100">
             <div class="cg__card">
               <img src="img/11.jpg" alt="" />
-              <p class="h4"><strong>Load / Unload Stations</strong></p>
+              <p class="h4">Load / Unload Stations</p>
               <p>
                 Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.
               </p>
@@ -103,7 +103,7 @@
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="150">
             <div class="cg__card">
               <img src="img/1.jpg" alt="" />
-              <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
+              <p class="h4">C Ring Setups/Takedowns</p>
               <p>
                 Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.
               </p>
@@ -113,7 +113,7 @@
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="200">
             <div class="cg__card">
               <img src="img/8.jpg" alt="" />
-              <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
+              <p class="h4">Tank Farm Rig In/Outs</p>
               <p>
                 Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.
               </p>
@@ -125,7 +125,7 @@
     </div>
 
     <div class="content1">
-      <section class="photo-bg" style="background-image:url(img/6.jpg)">
+      <section class="photo-bg" style="background-image:url(img/IMG_4461.JPG)">
         <div class="container">
           <div class="photo-bg__text-box">
             <div class="text-box__title aos-init" data-aos="fade-up">
@@ -152,6 +152,7 @@
 
     <div class="container content">
       <section class="photo-columns">
+        <div class="trans-logo"></div>
         <div class="row small-content">
           <div class="col-lg-6">
             <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
@@ -159,14 +160,6 @@
             <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
             <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
             <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
-          </div>
-          <div class="col-lg-6 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/11.jpg" alt="" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/4.jpg" alt="" class="btm-m" />
           </div>
           <div class="col-lg-6">
             <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
@@ -179,34 +172,29 @@
       </section>
     </div>
 
-    <section class="feature__photo small" style="background-image:url(img/10.jpg)">
+    <section class="feature__photo small" style="background-image:url(img/IMG_8870.jpg)">
       <div class="narrow-container">
         <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven <span class="primary-color">Service.</span></h2>
-        <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with <strong>integrity-driven service;</strong> enhancing the reputation of your business.</h4>
+        <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with integrity-driven service enhancing the reputation of your business.</h4>
       </div>
     </section>
 
-    <div class="wide-container content">
-      <section class="row">
-        <div class="col-xl-6">
-          <img src="img/2.jpg" alt="" class="m-20" />
-        </div>
-        <div class="col-xl-6">
-          <h3 class="feature__title">Contact Assure Energy.</h3>
-          <div class="row">
-            <div class="col-md-6">
-              <h4>Chris Rempel</h4>
-              <p>President &amp; CEO</p>
-              <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
-            </div>
-            <div class="col-md-6">
-              <h4>Sly Latreille</h4>
-              <p>Vice President / Operations</p>
-              <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
-            </div>
+    <div class="content bg-grey">
+      <div class="wide-container center">
+        <h2 class="muted-color m-20">Contact Assure Energy</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Chris Rempel</h4>
+            <p>President &amp; CEO</p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+          </div>
+          <div class="col-md-6">
+            <h4>Sly Latreille</h4>
+            <p>Vice President / Operations</p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
           </div>
         </div>
-      </section>
+      </div>
     </div>
 
   </main>
@@ -217,7 +205,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
-          <p>Integrity driven, labour solutions.</p>
+          <p>Integrity driven. Labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
