--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
 
   <main>
 
-    <section class="feature__photo small" style="background-image:url(img/9.jpg)">
+    <section class="feature__photo small" style="background-image:url(img/IMG_5392.JPG)">
       <div class="container">
         <h1 class="feature__title larger roadgeek">View Our Services</h1>
       </div>
@@ -70,110 +70,72 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 center">
-              <h2 class="aos-init" data-aos="fade-up"><span class="primary-color">Integrity Driven</span> Labour Solutions</h2>
+              <h2 class="aos-init" data-aos="fade-up"><span class="primary-color">Integrity Driven.</span> Labour Solutions.</h2>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container content">
-      <div class="row">
-        <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-          <img src="img/4.jpg" alt="Water Technicians" class="m-20" />
-        </div>
-        <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
-          <p class="h4"><strong>Water Technicians</strong></p>
-          <p>Assure Energy supplies experienced Water Transfer Technicians for a wide range of applications including but not limited to:</p>
-          <ul>
-            <li>Rig-In/Rig-Out Operations</li>
-            <li>Fracking Operations</li>
-            <li>Long Line Transfers</li>
-            <li>Pipeline Transfers</li>
-            <li>Flowback Operations</li>
-            <li>Winter Operations</li>
-            <li>Speed Loading/Offloading Stations</li>
-          </ul>
-          <p>Our crew of skilled professionals will help meet your manpower needs quickly and effectively to alleviate the pressures of growing client demands, while maintaining responsible company growth.</p>
-          <p>Our team provides knowledge and experience to help amplify your product with a culture dedicated to safety.</p>
-          <p>Motivated, reliable professionals promote a positive work environment and ensure your project is carried out efficiently to meet your client needs.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="content bg-grey">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
-            <p class="h4"><strong>Load / Unload Stations</strong></p>
-            <p>Assure Energy provides labour to Truck Speed Loading and Speed Unloading Stations. Our <strong>all-in-one</strong> services have you covered from rig-in to rig-out.</p>
-            <p>Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.</p>
-            <p>Once complete, our trained professionals operate your equipment with care safely and efficiently while adhering to a "Zero Spill" policy. Our team understands the importance of treating the Public, Truck Drivers and Clients with the utmost respect and professionalism.</p>
-            <p>Assure Energy documents volumes loaded and unloaded to ensure accurate volume totals. When your project is complete, our team ensures all equipment is rigged out and ready for transport with an emphasis on good housekeeping.</p>
-            <p>Assure Energy ensures your project will "Keep on Trucking”.</p>
-          </div>
-          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/11.jpg" alt="Load / Unload Stations" />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="content">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/1.jpg" alt="" class="m-20" />
-          </div>
-          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
-            <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
-            <p>Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="content bg-grey">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
-            <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
-            <p>Assure Energy provides experienced, skilled labourers to rig-in and rig-out all your tank farm needs. Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.</p>
-          </div>
-          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/8.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section class="feature__photo small" style="background-image:url(img/10.jpg)">
+    <section class="feature__photo small service" style="background-image:url(img/4.jpg)">
       <div class="narrow-container">
-        <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven <span class="primary-color">Service.</span></h2>
-        <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with <strong>integrity-driven service;</strong> enhancing the reputation of your business.</h4>
+        <h2>Water Technicians</h2>
+        <p>Assure Energy supplies experienced Water Transfer Technicians for a wide range of applications including but not limited to:</p>
+        <ul>
+          <li>Rig-In/Rig-Out Operations</li>
+          <li>Fracking Operations</li>
+          <li>Long Line Transfers</li>
+          <li>Pipeline Transfers</li>
+          <li>Flowback Operations</li>
+          <li>Winter Operations</li>
+          <li>Speed Loading/Offloading Stations</li>
+        </ul>
+        <p>Our crew of skilled professionals will help meet your manpower needs quickly and effectively to alleviate the pressures of growing client demands, while maintaining responsible company growth.</p>
+        <p>Our team provides knowledge and experience to help amplify your product with a culture dedicated to safety.</p>
+        <p>Motivated, reliable professionals promote a positive work environment and ensure your project is carried out efficiently to meet your client needs.</p>
       </div>
     </section>
 
-    <div class="wide-container content">
-      <section class="row">
-        <div class="col-xl-6">
-          <img src="img/2.jpg" alt="" />
-        </div>
-        <div class="col-xl-6">
-          <h3 class="feature__title">Contact Assure Energy.</h3>
-          <div class="row">
-            <div class="col-md-6">
-              <h4>Chris Rempel</h4>
-              <p>President &amp; CEO</p>
-              <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
-            </div>
-            <div class="col-md-6">
-              <h4>Sly Latreille</h4>
-              <p>Vice President / Operations</p>
-              <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
-            </div>
+    <section class="feature__photo small service" style="background-image:url(img/11.jpg)">
+      <div class="narrow-container">
+        <h2>Load / Unload Stations</h2>
+        <p>Assure Energy provides labour to Truck Speed Loading and Speed Unloading Stations. Our <strong>all-in-one</strong> services have you covered from rig-in to rig-out.</p>
+        <p>Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.</p>
+        <p>Once complete, our trained professionals operate your equipment with care safely and efficiently while adhering to a "Zero Spill" policy. Our team understands the importance of treating the Public, Truck Drivers and Clients with the utmost respect and professionalism.</p>
+        <p>Assure Energy documents volumes loaded and unloaded to ensure accurate volume totals. When your project is complete, our team ensures all equipment is rigged out and ready for transport with an emphasis on good housekeeping.</p>
+        <p>Assure Energy ensures your project will "Keep on Trucking”.</p>
+      </div>
+    </section>
+
+    <section class="feature__photo small service" style="background-image:url(img/1.jpg)">
+      <div class="narrow-container">
+        <h2>C Ring Setups/Takedowns</h2>
+        <p>Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.</p>
+      </div>
+    </section>
+
+    <section class="feature__photo small service" style="background-image:url(img/8.jpg)">
+      <div class="narrow-container">
+        <h2>Tank Farm Rig In/Outs</h2>
+        <p>Assure Energy provides experienced, skilled labourers to rig-in and rig-out all your tank farm needs. Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.</p>
+      </div>
+    </section>
+
+    <div class="content bg-grey">
+      <div class="wide-container center">
+        <h2 class="muted-color m-20">Contact Assure Energy</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Chris Rempel</h4>
+            <p>President &amp; CEO</p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+          </div>
+          <div class="col-md-6">
+            <h4>Sly Latreille</h4>
+            <p>Vice President / Operations</p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
           </div>
         </div>
-      </section>
+      </div>
     </div>
 
   </main>
@@ -184,7 +146,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
-          <p>Integrity driven, labour solutions.</p>
+          <p>Integrity driven. Labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
