--- a/about.html
+++ b/about.html
@@ -66,59 +66,51 @@
       </div>
     </section>
 
-    <div class="content bg-grey">
-      <div class="container">
-        <section class="photo-columns">
-          <div class="row">
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
-              <h3 class="aos-init" data-aos="fade-up">Why Assure Energy?</h3>
-              <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
-              <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
-              <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
-            </div>
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/7.jpg" alt="" />
-            </div>
+    <div class="container content">
+      <section class="photo-columns">
+        <div class="trans-logo"></div>
+        <div class="row small-content">
+          <div class="col-lg-6">
+            <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
+            <h3 class="aos-init" data-aos="fade-up">Why Assure Energy?</h3>
+            <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
+            <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
+            <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
           </div>
-          <div class="row">
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/5.jpg" alt="" class="btm-m" />
-            </div>
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
-              <h3 class="aos-init" data-aos="fade-up">Our Core Values</h3>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Customer Service.</strong> You are our first priority. Uncompromising service and support backed by devoted professionals motivated to bring you the highest quality product.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Safety.</strong> We are committed to promoting a safe culture that fosters consistency by adhering to strict policies and procedures. Our team is focused on completing tasks in the safest and most efficient manner that meets and exceeds industry standards.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Integrity.</strong> Our team understands the importance of honesty, transparency, and professional conduct.Reliability and performance are paramount in defining the reputations of our team and your business.</p>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
-
-
-    <div class="wide-container content">
-      <section class="row">
-        <div class="col-xl-6">
-          <img src="img/2.jpg" alt="" />
-        </div>
-        <div class="col-xl-6">
-          <h3 class="feature__title">Contact Assure Energy.</h3>
-          <div class="row">
-            <div class="col-md-6">
-              <h4>Chris Rempel</h4>
-              <p>President &amp; CEO</p>
-              <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
-            </div>
-            <div class="col-md-6">
-              <h4>Sly Latreille</h4>
-              <p>Vice President / Operations</p>
-              <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
-            </div>
+          <div class="col-lg-6">
+            <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
+            <h3 class="aos-init" data-aos="fade-up">Our Core Values</h3>
+            <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Customer Service.</strong> You are our first priority. Uncompromising service and support backed by devoted professionals motivated to bring you the highest quality product.</p>
+            <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Safety.</strong> We are committed to promoting a safe culture that fosters consistency by adhering to strict policies and procedures. Our team is focused on completing tasks in the safest and most efficient manner that meets and exceeds industry standards.</p>
+            <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Integrity.</strong> Our team understands the importance of honesty, transparency, and professional conduct.Reliability and performance are paramount in defining the reputations of our team and your business.</p>
           </div>
         </div>
       </section>
+    </div>
+
+    <section class="feature__photo small" style="background-image:url(img/unnamed.jpg)">
+      <div class="narrow-container">
+        <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven Service.</h2>
+        <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with integrity-driven service enhancing the reputation of your business.</h4>
+      </div>
+    </section>
+
+    <div class="content bg-grey">
+      <div class="wide-container center">
+        <h2 class="muted-color m-20">Contact Assure Energy</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Chris Rempel</h4>
+            <p>President &amp; CEO</p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+          </div>
+          <div class="col-md-6">
+            <h4>Sly Latreille</h4>
+            <p>Vice President / Operations</p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
@@ -129,7 +121,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
-          <p>Integrity driven, labour solutions.</p>
+          <p>Integrity driven. Labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
