--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
       </section>
     </div>
 
-    <section class="feature__photo small" style="background-image:url(img/unnamed.jpg)">
+    <section class="feature__photo small" style="background-image:url(img/IMG_4462.JPG)">
       <div class="narrow-container">
-        <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven Service.</h2>
+        <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven <span class="primary-color">Service.</span></h2>
         <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with integrity-driven service enhancing the reputation of your business.</h4>
       </div>
     </section>
@@ -102,12 +102,12 @@
           <div class="col-md-6">
             <h4>Chris Rempel</h4>
             <p>President &amp; CEO</p>
-            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
           </div>
           <div class="col-md-6">
             <h4>Sly Latreille</h4>
             <p>Vice President / Operations</p>
-            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
           </div>
         </div>
       </div>
