--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <div class="wide-container">
       <div class="row">
         <div class="col-lg-3">
-          <h2 class="title"><a class="ir" href="/">Assure Energy Services</a></h2>
+          <h2 class="title"><a class="ir white" href="/">Assure Energy Services</a></h2>
         </div>
         <div class="col-lg-9">
           <div class="menu-btn">
@@ -66,23 +66,26 @@
       </div>
     </section>
 
-    <div class="content bg-dark-grey">
+    <div class="content bg-grey">
       <div class="container">
+        <div class="trans-logo"></div>
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-4">
             <i class="fas fa-phone fa-large m-40 aos-init" data-aos="fade-up"></i>
             <h3 class="m-40 aos-init" data-aos="fade-up">Phone</h3>
             <p class="aos-init" data-aos="fade-up">
               Call Chris at 780-897-7889<br />Call Sly at 780-978-8677
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <i class="fas fa-envelope fa-large m-40 aos-init" data-aos="fade-up"></i>
             <h3 class="m-40 aos-init" data-aos="fade-up">Email</h3>
             <p class="aos-init" data-aos="fade-up">
               Email Chris at <a href="mailto:chris@assureenergy.ca">chris@assureenergy.ca</a><br />Email Sly at <a href="mailto:sly@assureenergy.ca">sly@assureenergy.ca</a>
             </p>
           </div>
+          <div class="col-lg-2"></div>
         </div>
       </div>
     </div>
