--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="wide-container">
       <div class="row">
         <div class="col-lg-3">
-          <h2 class="title"><a class="ir" href="/">Assure Energy Services</a></h2>
+          <h2 class="title"><a class="ir white" href="/">Assure Energy Services</a></h2>
         </div>
         <div class="col-lg-9">
           <div class="menu-btn">
@@ -63,7 +63,7 @@
     <section class="feature__photo" style="background-image:url(img/10.jpg)">
       <div class="container">
         <h1 class="feature__title larger roadgeek">Assure Energy Services</h1>
-        <p>Integrity Driven. Labour Solutions.</p>
+        <p><span class="primary-color">Integrity Driven.</span><br />Labour Solutions.</p>
 
       </div>
     </section>
@@ -186,12 +186,12 @@
           <div class="col-md-6">
             <h4>Chris Rempel</h4>
             <p>President &amp; CEO</p>
-            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
           </div>
           <div class="col-md-6">
             <h4>Sly Latreille</h4>
             <p>Vice President / Operations</p>
-            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
           </div>
         </div>
       </div>
