--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
     </div>
 
     <section class="feature__photo small service" style="background-image:url(img/4.jpg)">
-      <div class="narrow-container">
+      <div class="narrow-container photo-bg__text-box trans">
         <h2>Water Technicians</h2>
         <p>Assure Energy supplies experienced Water Transfer Technicians for a wide range of applications including but not limited to:</p>
         <ul>
@@ -96,7 +96,7 @@
     </section>
 
     <section class="feature__photo small service" style="background-image:url(img/11.jpg)">
-      <div class="narrow-container">
+      <div class="narrow-container photo-bg__text-box trans">
         <h2>Load / Unload Stations</h2>
         <p>Assure Energy provides labour to Truck Speed Loading and Speed Unloading Stations. Our <strong>all-in-one</strong> services have you covered from rig-in to rig-out.</p>
         <p>Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.</p>
@@ -106,15 +106,15 @@
       </div>
     </section>
 
-    <section class="feature__photo small service" style="background-image:url(img/1.jpg)">
-      <div class="narrow-container">
+    <section class="feature__photo small service" style="background-image:url(img/2.jpg)">
+      <div class="narrow-container photo-bg__text-box trans">
         <h2>C Ring Setups/Takedowns</h2>
         <p>Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.</p>
       </div>
     </section>
 
     <section class="feature__photo small service" style="background-image:url(img/8.jpg)">
-      <div class="narrow-container">
+      <div class="narrow-container photo-bg__text-box trans">
         <h2>Tank Farm Rig In/Outs</h2>
         <p>Assure Energy provides experienced, skilled labourers to rig-in and rig-out all your tank farm needs. Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.</p>
       </div>
@@ -127,12 +127,12 @@
           <div class="col-md-6">
             <h4>Chris Rempel</h4>
             <p>President &amp; CEO</p>
-            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
           </div>
           <div class="col-md-6">
             <h4>Sly Latreille</h4>
             <p>Vice President / Operations</p>
-            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
           </div>
         </div>
       </div>
