--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://assureenergy.ca/img/social-share.jpg" />
   <title>About Assure Energy Services | Grande Prairie, AB</title>
 
-  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
+  <meta name="Description" content="Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.">
 
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
@@ -148,7 +148,7 @@
             <div class="col-6 col-sm-4 m-20"><img src="img/2.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/3.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/4.jpg" alt="" /></div>
-            <div class="col-6 col-sm-4 m-20"><img src="img/7.jpg" alt="" /></div>
+            <div class="col-6 col-sm-4 m-20"><img src="img/IMG_2506.JPG" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/8.jpg" alt="" /></div>
           </div>
         </div>
