--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://assureenergy.ca/img/social-share.jpg" />
   <title>Contact Assure Energy Services | Grande Prairie, AB</title>
 
-  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
+  <meta name="Description" content="Contact Assure Energy Services today. We are located in Grande Prairie, Alberta. Email us an info@assureenergy.ca">
 
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
@@ -177,7 +177,7 @@
             <div class="col-6 col-sm-4 m-20"><img src="img/2.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/3.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/4.jpg" alt="" /></div>
-            <div class="col-6 col-sm-4 m-20"><img src="img/7.jpg" alt="" /></div>
+            <div class="col-6 col-sm-4 m-20"><img src="img/IMG_2506.JPG" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/8.jpg" alt="" /></div>
           </div>
         </div>
