--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://assureenergy.ca/img/social-share.jpg" />
   <title>Assure Energy Services | Grande Prairie, AB</title>
 
-  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
+  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta. Our services include water technicians, load/unload stations, C-ring setups and takedowns, and tank farm rig ins/outs.">
 
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
@@ -64,7 +64,6 @@
       <div class="container">
         <h1 class="feature__title larger roadgeek">Assure Energy Services</h1>
         <p><span class="primary-color">Integrity Driven.</span><br />Labour Solutions.</p>
-
       </div>
     </section>
 
@@ -92,7 +91,7 @@
           </div>
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="100">
             <div class="cg__card">
-              <img src="img/11.jpg" alt="" />
+              <img src="img/11.jpg" alt="Load and unload stations" />
               <p class="h4">Load / Unload Stations</p>
               <p>
                 Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.
@@ -102,7 +101,7 @@
           </div>
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="150">
             <div class="cg__card">
-              <img src="img/1.jpg" alt="" />
+              <img src="img/1.jpg" alt="c ring setups and takedowns" />
               <p class="h4">C Ring Setups/Takedowns</p>
               <p>
                 Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.
@@ -112,7 +111,7 @@
           </div>
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="200">
             <div class="cg__card">
-              <img src="img/8.jpg" alt="" />
+              <img src="img/8.jpg" alt="tank farm ring ins and outs" />
               <p class="h4">Tank Farm Rig In/Outs</p>
               <p>
                 Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.
@@ -232,7 +231,7 @@
             <div class="col-6 col-sm-4 m-20"><img src="img/2.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/3.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/4.jpg" alt="" /></div>
-            <div class="col-6 col-sm-4 m-20"><img src="img/7.jpg" alt="" /></div>
+            <div class="col-6 col-sm-4 m-20"><img src="img/IMG_2506.JPG" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/8.jpg" alt="" /></div>
           </div>
         </div>
