--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://assureenergy.ca/img/social-share.jpg" />
   <title>Services | Assure Energy Services | Grande Prairie, AB</title>
 
-  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
+  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta. Our services include water technicians, load/unload stations, C-ring setups and takedowns, and tank farm rig ins/outs.">
 
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
@@ -173,7 +173,7 @@
             <div class="col-6 col-sm-4 m-20"><img src="img/2.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/3.jpg" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/4.jpg" alt="" /></div>
-            <div class="col-6 col-sm-4 m-20"><img src="img/7.jpg" alt="" /></div>
+            <div class="col-6 col-sm-4 m-20"><img src="img/IMG_2506.JPG" alt="" /></div>
             <div class="col-6 col-sm-4 m-20"><img src="img/8.jpg" alt="" /></div>
           </div>
         </div>
