--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 center">
-              <h2 class="aos-init" data-aos="fade-up"><span class="primary-color">Integrity Driven.</span> Labour Solutions.</h2>
+              <h2><span class="primary-color">Integrity Driven.</span> Labour Solutions.</h2>
           </div>
         </div>
       </div>
