--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,25 @@
       </div>
     </section>
 
-    <div class="content bg-grey">
+    <div class="content bg-grey d-lg-none">
+      <div class="wide-container center">
+        <h2 class="muted-color m-20">Contact Assure Energy</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Chris Rempel</h4>
+            <p>President &amp; CEO</p>
+            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
+          </div>
+          <div class="col-md-6">
+            <h4>Sly Latreille</h4>
+            <p>Vice President / Operations</p>
+            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="content bg-grey d-none d-lg-block">
       <div class="container">
         <div class="trans-logo"></div>
         <div class="row">
