--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="wide-container">
       <div class="row">
         <div class="col-lg-3">
-          <h2 class="title"><a class="ir white" href="/">Assure Energy Services</a></h2>
+          <h2 class="title"><a class="ir" href="/">Assure Energy Services</a></h2>
         </div>
         <div class="col-lg-9">
           <div class="menu-btn">
