Fixed contact page

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <div class="content bg-grey d-lg-none">
+    <div class="content bg-grey">
       <div class="wide-container center">
         <div class="row">
           <div class="col-md-6">
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <div class="content bg-grey d-none d-lg-block">
+    <div class="content bg-grey d-none">
       <div class="container">
         <div class="trans-logo"></div>
         <div class="row">
