--- a/about.html
+++ b/about.html
@@ -95,23 +95,18 @@
       </div>
     </section>
 
-    <div class="content bg-grey">
-      <div class="wide-container center">
-        <h2 class="muted-color m-20">Contact Assure Energy</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Chris Rempel</h4>
-            <p>President &amp; CEO</p>
-            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
+      <div class="content bg-grey">
+          <div class="wide-container center">
+              <h2 class="muted-color m-20">Contact Assure Energy</h2>
+              <div class="row d-flex justify-content-center">
+                  <div class="col-md-6">
+                      <h4>Chris Rempel</h4>
+                      <p>President &amp; CEO</p>
+                      <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
+                  </div>
+              </div>
           </div>
-          <div class="col-md-6">
-            <h4>Sly Latreille</h4>
-            <p>Vice President / Operations</p>
-            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
-          </div>
-        </div>
       </div>
-    </div>
 
   </main>
 
@@ -157,7 +152,7 @@
     <div class="copyright">
       <div class="wide-container">
         <p>
-          &copy;2019 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
+          &copy;2019-2020 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
         </p>
       </div>
     </div>
