--- a/contact.html
+++ b/contact.html
@@ -66,22 +66,18 @@
       </div>
     </section>
 
-    <div class="content bg-grey">
-      <div class="wide-container center">
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Chris Rempel</h4>
-            <p>President &amp; CEO</p>
-            <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
+      <div class="content bg-grey">
+          <div class="wide-container center">
+              <h2 class="muted-color m-20">Contact Assure Energy</h2>
+              <div class="row d-flex justify-content-center">
+                  <div class="col-md-6">
+                      <h4>Chris Rempel</h4>
+                      <p>President &amp; CEO</p>
+                      <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">chris@assureenergy.ca</strong></a></p>
+                  </div>
+              </div>
           </div>
-          <div class="col-md-6">
-            <h4>Sly Latreille</h4>
-            <p>Vice President / Operations</p>
-            <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">sly@assureenergy.ca</strong></a></p>
-          </div>
-        </div>
       </div>
-    </div>
 
     <div class="content bg-grey d-none">
       <div class="container">
@@ -92,14 +88,14 @@
             <i class="fas fa-phone fa-large m-40 aos-init" data-aos="fade-up"></i>
             <h3 class="m-40 aos-init" data-aos="fade-up">Phone</h3>
             <p class="aos-init" data-aos="fade-up">
-              Call Chris at 780-897-7889<br />Call Sly at 780-978-8677
+              Call Chris at 780-897-7889
             </p>
           </div>
           <div class="col-lg-4">
             <i class="fas fa-envelope fa-large m-40 aos-init" data-aos="fade-up"></i>
             <h3 class="m-40 aos-init" data-aos="fade-up">Email</h3>
             <p class="aos-init" data-aos="fade-up">
-              Email Chris at <a href="mailto:chris@assureenergy.ca">chris@assureenergy.ca</a><br />Email Sly at <a href="mailto:sly@assureenergy.ca">sly@assureenergy.ca</a>
+              Email Chris at <a href="mailto:chris@assureenergy.ca">chris@assureenergy.ca</a>
             </p>
           </div>
           <div class="col-lg-2"></div>
@@ -203,7 +199,7 @@
     <div class="copyright">
       <div class="wide-container">
         <p>
-          &copy;2019 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
+          &copy;2019-2020 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
         </p>
       </div>
     </div>
