Added google verification meta tag

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     gtag('config', 'UA-130417297-1');
   </script>
+  
+  <meta name="google-site-verification" content="LfQKY69kyb8XjTtq7epA6OAuoFnsOugELTGfGcAy_Uc" />
 
 </head>
 
